# brobotics

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
ble-scan/: Cargo.toml
ble-scan/src/: main.rs
ble-scanner/: Cargo.toml
ble-scanner/src/: main.rs
body_km/: Cargo.toml
body_km/body_chain_source/: graph.txt  kchain.txt  vector.txt
body_km/config/: skeleton.json
body_km/src/: main.rs  skeleton.rs
body_viz/: Cargo.toml
body_viz/csv/: right_arm_front_raise.csv  two_sensors_right_upper_and_forearm.csv
body_viz/src/: main.rs
dmp-analysis/: analyze.py
imu-display/: Cargo.toml  memory.x
imu-display/src/: main.rs  st7735.rs
mpu6050/: Cargo.toml  memory.x
mpu6050/src/: dmp_firmware.rs  main.rs
mpu6050_firmware/: Cargo.toml
mpu6050_firmware/src/: dmp_firmware.rs  lib.rs
scripts/: run.sh  run_imu_display.sh  run_imu_display_with_tee.sh  run_live.sh  run_mpu6050_to_csv.sh  run_mpu6050_with_tee.sh  run_st7735_test.sh  run_tca9548a.sh  run_visualizer.sh  run_viz.sh  run_with_tee.sh  run_xiao_nrf52840.sh
sensors/: Cargo.toml  memory.x
sensors/src/: dmp_firmware.rs  gps.rs  gyro.rs  madgwick_filter.rs  main.rs  uart_subscriber.rs
st7735-test/: Cargo.toml  memory.x
st7735-test/src/: main.rs  st7735.rs
tca9548a/: Cargo.toml  memory.x
tca9548a/.cargo/: config.toml
tca9548a/src/: main.rs
visualizer/: Cargo.toml
visualizer/assets/models/: Box_2.0.glb  Jet_2.0.glb  jet.gltf
visualizer/src/: data_handler.rs  main.rs  sensors.rs
visualizer/src/interactive/: components.rs  mod.rs
viz/: Cargo.toml
viz/src/: main.rs
xiao-blink-test/: Cargo.toml
xiao-blink-test/src/: main.rs
xiao-nrf52840/: Cargo.toml  build.rs
xiao-nrf52840/src/: main.rs
xiao-sleep/: Cargo.toml  memory.x
xiao-sleep/src/: main.rs
xtask/src/: main.rs
