[workspace]
resolver = "2"
members = [
    "viz",
    "mpu6050",
    "st7735-test",
    "imu-display",
    "body_km",
    "body_viz",
    "tca9548a",
    "mpu6050_firmware",
    "xiao-nrf52840", "xiao-blink-test",
    "ble-scanner",
    "ble-scan",
    "xiao-sleep",
    "xtask",
]

[workspace.dependencies]
mpu6050_firmware = { path = "./mpu6050_firmware" }
