[package]
name = "visualizer"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.12", features = [] }
bevy_gltf = "0.12"          # for loading GLB models
tokio = { version = "1.30", features = ["full"] }  # for async file reading
#bevy = { workspace = true } 
#bevy_gltf = { workspace = true }
#tokio = { workspace = true } 
